[package]
name = "vrc-ban"
version = "0.5.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vrc-ban-bot"
path = "src/bin/bot.rs"

[[bin]]
name = "vrc-ban-log"
path = "src/bin/log.rs"

[dependencies]
color-eyre = { version = "0.6", default-features = false }
derive-config = { version = "2", features = ["toml"] }
poise = { version = "0.6", features = ["collector"] }
reqwest = { version = "0.12", default-features = false }
reqwest_cookie_store = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sqlx = { version = "0.8", features = ["mysql"] }
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros"] }
totp = { version = "5", package = "totp-rs" }
vrchatapi = { git = "https://github.com/Shays-Forks/vrchatapi-rust" }

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls", "sqlx/runtime-tokio-native-tls"]
rustls-tls = ["reqwest/rustls-tls", "sqlx/runtime-tokio-rustls"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"
